Add adminClient for topics handling
